--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,9 +42,14 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-<string>This app needs access to location when open.</string>
-
-<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-<string>This app needs access to location when open and in the background.</string>
+	<string>This app needs access to location when open.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open and in the background.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For photo upload</string>
+	<key>NSCameraUsageDescription</key>
+	<string>For photo upload</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>For photo upload</string>
 </dict>
 </plist>
