--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,12 @@ dependencies:
   flutter_svg: ^0.18.1
   http: ^0.12.2
   rxdart: ^0.23.1
+  shared_preferences: ^0.5.7+2
+  image_picker: ^0.6.7+7
+  feather_icons_flutter: ^4.7.4
   device_info: ^0.4.2+7
+  permission_handler: ^5.0.1+1
+
   geolocator: ^5.1.3
 
   flutter:
