--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,28 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Share music</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Save date</string>
+	<key>NSCameraUsageDescription</key>
+	<string>For photo upload</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Invite friends</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open and in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Find friends</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>For photo upload</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Important</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For photo upload</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Voice</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,15 +63,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open and in the background.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For photo upload</string>
-	<key>NSCameraUsageDescription</key>
-	<string>For photo upload</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>For photo upload</string>
 </dict>
 </plist>
