--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,13 @@ dependencies:
   rxdart: ^0.23.1
   shared_preferences: ^0.5.7+2
   image_picker: ^0.6.7+7
+  cloud_firestore: ^0.14.1+2
   feather_icons_flutter: ^4.7.4
+  firebase_core: ^0.5.0
+  firebase_storage: ^4.0.1
+  cached_network_image: ^2.3.2+1
+  fluttertoast: ^7.1.1
+  bubble: ^1.1.9+1
   device_info: ^0.4.2+7
   permission_handler: ^5.0.1+1
 
