--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,13 @@ dependencies:
   cloud_firestore: ^0.14.1+2
   feather_icons_flutter: ^4.7.4
   firebase_core: ^0.5.0
+  firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^3.0.0
   firebase_storage: ^4.0.1
   cached_network_image: ^2.3.2+1
+  flutter_tindercard: ^0.2.0
+  audioplayers: ^0.16.1
+  provider: ^4.3.2+2
   fluttertoast: ^7.1.1
   bubble: ^1.1.9+1
   device_info: ^0.4.2+7
