--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter_svg: ^0.18.1
   http: ^0.12.2
-  rxdart: ^0.23.1
+  rxdart: ^0.24.0
   shared_preferences: ^0.5.7+2
   image_picker: ^0.6.7+7
   cloud_firestore: ^0.14.1+2
   feather_icons_flutter: ^4.7.4
   firebase_core: ^0.5.0
+  google_maps_place_picker: ^1.0.0
+  flutter_google_places: ^0.2.6
+  tuple: ^1.0.3
+  geolocator: ^6.1.1
+  google_maps_webservice: ^0.0.18
   firebase_messaging: ^7.0.3
   flutter_local_notifications: ^3.0.0
   firebase_storage: ^4.0.1
@@ -41,7 +46,6 @@ dependencies:
   device_info: ^0.4.2+7
   permission_handler: ^5.0.1+1
 
-  geolocator: ^5.1.3
 
   flutter:
     sdk: flutter
