--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,8 +10,6 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>io.flutter.embedded_views_preview</key>
-	<true/>
 	<key>CFBundleName</key>
 	<string>wemeet</string>
 	<key>CFBundlePackageType</key>
@@ -46,6 +44,11 @@
 	<string>For photo upload</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Voice</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -65,5 +68,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
