--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   google_maps_place_picker: ^1.0.0
   flutter_google_places: ^0.2.6
   tuple: ^1.0.3
+  advance_pdf_viewer: ^1.2.0
+  url_launcher: ^5.7.10
   geolocator: ^6.1.1
   google_maps_webservice: ^0.0.18
   firebase_messaging: ^7.0.3
