--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,7 +43,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>For photo upload</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Voice</string>
+	<string>This app needs access to speech recognition.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
