--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   audio_service: ^0.11.0
   just_audio: ^0.2.1
   socket_io_client: ^0.9.12
+  firebase_crashlytics: ^0.2.3+1
   tuple: ^1.0.3
   advance_pdf_viewer: ^1.2.0
   url_launcher: ^5.7.10
