--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@
 .pub/
 /build/
 
+# Android related
+**/android/local.properties
+**/android/key.properties
+
 # Web related
 lib/generated_plugin_registrant.dart
 
