--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,4 +63,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.google.firebase:firebase-messaging:20.1.0"
 }
