--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -73,5 +73,7 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 </dict>
 </plist>
