--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   date_format: ^1.0.9
   scoped_model: ^1.1.0
   scroll_to_index: ^1.0.6
+  bot_toast: ^3.0.5
+  strings: ^0.1.4
+  flutter_cupertino_date_picker:
+    git: https://github.com/lakexyde/flutter-cupertino-date-picker.git
+  flutter_spinkit: ^4.1.2
 
 
   flutter:
