--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,12 +28,10 @@
 	<string>Share music</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Save date</string>
-	<key>NSCameraUsageDescription</key>
-	<string>For photo upload</string>
 	<key>NSContactsUsageDescription</key>
 	<string>Invite friends</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs access to location when open and in the background.</string>
+	<string>WeMeet wants to access your location so we can find matches near you.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Find friends</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
@@ -42,8 +40,10 @@
 	<string>For photo upload</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Important</string>
+	<key>NSCameraUsageDescription</key>
+	<string>WeMeet wants to access your photos so you can update your profile photo.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For photo upload</string>
+	<string>WeMeet wants to access your photos so you can update your profile pictures.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>This app needs access to speech recognition.</string>
 	<key>UIBackgroundModes</key>
