--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   location_permissions: ^3.0.0+1
   flutter_keyboard_visibility: ^4.0.0
-  
+  pull_to_refresh: "1.6.2"
 
 
   flutter:
