--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_keyboard_visibility: ^4.0.0
   pull_to_refresh: "1.6.2"
   flutter_xlider: ^3.4.0
+  flutter_image_compress: ^0.7.0
 
 
   flutter:
