--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,35 +24,31 @@ dependencies:
   ionicons: ^0.1.1
   http: ^0.12.2
   flutter_paystack: ^1.0.4+1
-  rxdart: ^0.24.0
+  rxdart: ^0.25.0
   shared_preferences: ^0.5.7+2
   image_picker: ^0.6.7+7
   feather_icons_flutter: ^4.7.4
-  firebase_messaging: ^7.0.3
-  audio_service: ^0.11.0
-  just_audio: ^0.2.1
+  firebase_messaging: ^8.0.0-dev.15
+  just_audio: ^0.6.15+1
   socket_io_client: ^0.9.12
-  firebase_crashlytics: ^0.2.3+1
-  tuple: ^1.0.3
-  advance_pdf_viewer: ^1.2.0
-  url_launcher: ^5.7.10
-  flutter_local_notifications: ^3.0.0
-  place_picker: ^0.9.17
+  firebase_crashlytics: ^0.4.0+1
+  url_launcher: ^6.0.2
+  flutter_local_notifications: ^4.0.1+1
   cached_network_image: ^2.3.2+1
   flutter_tindercard: ^0.2.0
   bubble: ^1.1.9+1
-  device_info: ^0.4.2+7
+  device_info: ^2.0.0
   date_format: ^1.0.9
   scoped_model: ^1.1.0
-  scroll_to_index: ^1.0.6
-  bot_toast: ^3.0.5
+  scroll_to_index: ^2.0.0
+  bot_toast: ^4.0.0+1
   strings: ^0.1.4
   flutter_cupertino_date_picker:
     git: https://github.com/lakexyde/flutter-cupertino-date-picker.git
   flutter_spinkit: ^4.1.2
   location_permissions: ^3.0.0+1
   flutter_keyboard_visibility: ^4.0.0
-  pull_to_refresh: "1.6.2"
+  pull_to_refresh: ^1.6.4
   flutter_xlider: ^3.4.0
   flutter_image_compress: ^0.7.0
   geocoder: ^0.2.1
@@ -61,19 +57,18 @@ dependencies:
   flutter:
     sdk: flutter
 dependency_overrides:
-  flutter_svg: ^0.18.1
-  location: ^3.2.4
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
+
+  flutter_svg: ^0.19.3
+  location: ^3.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
-  flutter_launcher_icons: "^0.7.3"
+  flutter_launcher_icons: ^0.8.1
 
 flutter_icons:
   android: true
